# SD-1000

Source/CVBasic/: cvbasic_prologue.asm  splash.bas
Source/VSCode/VSC-SD-1000/: CMakeLists.txt  flash_fs.c  flash_rom.h  flash_rom1.h  flash_rom2.h  flash_rom3.h  flash_rom4.h  flash_rom5.h  main.c  memmap_sd1000.ld  menu_rom.h  sega_cart.c  sg1000_menu_rom.h
Source/VSCode/VSC-SD-1000/menu/: Makefile  bin2c.py  main.c  menu.c
Source/VSCode/VSC-SD-1000/roms/: make.py
